ui/fail/value/cast_lifetime.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/cast_lifetime.rs:9:29
   |
9  |         let v = Value::from(&a);
   |                             ^^ borrowed value does not live long enough
10 |         invalid = v.cast();
11 |     }
   |     - `a` dropped here while still borrowed
...
14 |     do_stuff(invalid);
   |              ------- borrow later used here
